// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`props should render _override props 1`] = `
<div>
  <div
    class="components-component test-component css-1j9m8ga-View emotion-0"
    data-wp-c16t="true"
    data-wp-component="Component"
  >
    Code is Poetry
  </div>
</div>
`;

exports[`props should render context props 1`] = `
<div>
  <div
    class="components-component css-1j9m8ga-View emotion-0"
    data-wp-c16t="true"
    data-wp-component="Component"
  >
    Code is Poetry
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div>
  <div
    class="components-component css-1j9m8ga-View emotion-0"
    data-wp-c16t="true"
    data-wp-component="Component"
  />
</div>
`;
